1st unit test - an event gets added to the list - PASSED

--- a/specRunner.html
+++ b/specRunner.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="src/square.js"></script>
+  <script src="src/event.js"></script>
   <script src="spec/testingFrame.js"></script>
-  <script src="spec/squareTest.js"></script>
+  <script src="spec/eventTest.js"></script>
 
 </head>
   <body>
