2nd unit test passed - events instantiate with name

--- a/specRunner.html
+++ b/specRunner.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="src/eventList.js"></script>
   <script src="src/event.js"></script>
   <script src="spec/testingFrame.js"></script>
+  <script src="spec/eventListTest.js"></script>
   <script src="spec/eventTest.js"></script>
 
 </head>
