--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
   <head>
+    <script src="scripts/main.js"></script>
     <meta charset="utf-8">
-    <title>Angry Messages</title>
+    <title>Whats on</title>
     <link rel="stylesheet" href="public/style.css">
   </head>
+  <center>
+  <h1> Whats on around you </h1>
+  </center>
   <body>
-    </body>
+  <button onclick="postEvent()">Post Event</button>
+  <div id="PostEvent" style="display:none;">
+    <form>
+      <input type="text" id="eventpost" name="Event Name">
+      <input type="date" min="2019-01-22" max="2020-01-22">
+      <input type="submit" name="submit">
+      </form>
+      </div>
+  </body>
