--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
   <head>
-    <script src="scripts/main.js"></script>
     <meta charset="utf-8">
     <title>Whats on</title>
     <link rel="stylesheet" href="public/style.css">
@@ -9,12 +8,15 @@
   <h1> Whats on around you </h1>
   </center>
   <body>
-  <button onclick="postEvent()">Post Event</button>
-  <div id="PostEvent" style="display:none;">
+  <button onclick="openInput()">Post Event</button>
+  <div id="PostEvent" style="display:none">
     <form>
-      <input type="text" id="eventpost" name="Event Name">
-      <input type="date" min="2019-01-22" max="2020-01-22">
-      <input type="submit" name="submit">
+      <input type="text" id="eventnamepost" name="Event Name">
+      <input type="date" id="datepost" min="2019-01-22" max="2020-01-22">
+      <button type ="button" id = "SubmitEvent" name="Submit Event">Submit</button>
       </form>
       </div>
+      <script src="scripts/event.js"></script>
+      <script src="scripts/eventList.js"></script>
+      <script src="scripts/main.js"></script>
   </body>
