Refactored time stamp to be more readable

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <form>
       <input type="text" id="eventnamepost" name="Event Name">
       <input type="date" id="datepost" min="2019-01-22" max="2020-01-22">
+      <input type="time" id="timepost">
       <button type ="button" id = "SubmitEvent" name="Submit Event">Submit</button>
       </form>
       </div>
