--- a/specRunner.html
+++ b/specRunner.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="src/eventList.js"></script>
-  <script src="src/event.js"></script>
+  <script src="scripts/eventList.js"></script>
+  <script src="scripts/event.js"></script>
   <script src="spec/testingFrame.js"></script>
-  <script src="spec/eventListTest.js"></script>
+  <script src="spec/eventTest.js"></script>
   <script src="spec/eventTest.js"></script>
 
 </head>
