Sort function implemented events now display in date order

--- a/specRunner.html
+++ b/specRunner.html
@@ -5,7 +5,7 @@
   <script src="scripts/event.js"></script>
   <script src="spec/testingFrame.js"></script>
   <script src="spec/eventTest.js"></script>
-  <script src="spec/eventTest.js"></script>
+  <script src="spec/eventListTest.js"></script>
 
 </head>
   <body>
