User can now input city to event from page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
       <input type="text" id="eventnamepost" name="Event Name">
       <input type="date" id="datepost" min="2019-01-22" max="2020-01-22">
       <input type="time" id="timepost">
+      <select name="cars" id="eventcitypost">
+  <option value="Bristol">Bristol</option>
+  <option value="Cardiff">Cardiff</option>
+  <option value="Edinburgh">Edinburgh</option>
+  <option value="Liverpool">Liverpool</option>
+  <option value="London">London</option>
+  <option value="Manchester">Manchester</option>
+  <option value="Newcastle">Newcastle</option>
+  <option value="Portsmouth">Portsmouth</option>
+  <option value="Reading">Reading</option>
+  <option value="Windsor">Windsor</option>
+</select>
       <button type ="button" id = "SubmitEvent" name="Submit Event">Submit</button>
       </form>
       </div>
