weather reporting for any city implemented

--- a/index.html
+++ b/index.html
@@ -30,8 +30,38 @@
       </form>
       </div>
   <div id="eventList" align="right">
+
+  </div>
+
+  <div>
+    <body>
+      <div class="container">
+        <header class="header">
+          <div class ="search">
+            <input type="text" placeholder="Enter city name" id="search-txt">
+            <a id="search-btn" href="#"><i class="fas fa-search"></i></a>
+            </div>
+            </header>
+
+            <main id="main">
+
+          <div class="city-icon">
+          <div class="city-icon-holder">
+          <div id="city-name"></div>
+            <img src="" alt="" id="icon">
+          </div>
+
+          <div class="temperature">
+            <div id="temp"></div>
+            </div>
+
+          <div class="humidity">
+            <div id="humidity-div"></div>
+            </div>
+      </div>
   </div>
       <script src="scripts/event.js"></script>
       <script src="scripts/eventList.js"></script>
+      <script src="weather/weather.js"></script>
       <script src="scripts/main.js"></script>
   </body>
